--- a/foundry.toml
+++ b/foundry.toml
@@ -24,7 +24,8 @@ runs = 256
 depth = 15
 
 [profile.production]
+evm_version = "shanghai"
 optimizer = true
-optimizer_runs = 200
+optimizer_runs = 999999
 build_info = true
 sizes = true
