--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "lib/forge-std"]
 	path = lib/forge-std
-	url = https://github.com/foundry-rs/forge-std.git
+	url = git@github.com:foundry-rs/forge-std.git
+	branch = v1.2.0
+[submodule "lib/common"]
+	path = lib/common
+	url = git@github.com:MZero-Labs/common.git
