--- a/foundry.toml
+++ b/foundry.toml
@@ -7,7 +7,7 @@ libs = ["lib"]
 cache = true
 cache_path = "cache"
 broadcast = "broadcast"
-gas_reports = ["*"]
+gas_reports = ["MToken", "Protocol", "ProtocolHarness"]
 gas_reports_ignore = []
 solc-version = "0.8.21"
 optimizer = false
