--- a/package.json
+++ b/package.json
@@ -13,11 +13,25 @@
     "solhint-fix": "solhint --fix 'src/**/*.sol'"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
+    "@nomicfoundation/hardhat-ethers": "^3.0.0",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
+    "@nomicfoundation/hardhat-toolbox": "^4.0.0",
+    "@nomicfoundation/hardhat-verify": "^2.0.0",
+    "@typechain/ethers-v6": "^0.5.0",
+    "@typechain/hardhat": "^9.0.0",
+    "chai": "^4.2.0",
+    "ethers": "^6.4.0",
+    "hardhat": "^2.19.2",
+    "hardhat-gas-reporter": "^1.0.9",
     "prettier": "^3.0.0",
     "prettier-plugin-solidity": "^1.1.3",
-    "solhint": "^3.4.1"
+    "rand-seed": "^1.0.2",
+    "solhint": "^3.4.1",
+    "solidity-coverage": "^0.8.0",
+    "typechain": "^8.3.0"
   },
   "engines": {
-    "node": ">=18"
+    "node": ">=20"
   }
 }
