--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "GPL-3.0",
   "scripts": {
     "coverage": "forge coverage --report lcov && lcov --extract lcov.info -o lcov.info 'src/*'",
-    "prettier": "prettier --write 'script/**/*.sol' 'src/**/*.sol' 'test/**/*.sol'",
+    "prettier": "prettier --write --plugin=prettier-plugin-solidity 'script/**/*.sol' 'src/**/*.sol' 'test/**/*.sol'",
     "slither": "forge build --build-info --skip '*/test/**' --skip '*/script/**' --force && slither --compile-force-framework foundry --ignore-compile --config-file slither.config.json --fail-high .",
     "solhint": "solhint -f stylish 'src/**/*.sol'",
     "solhint-fix": "solhint --fix 'src/**/*.sol'"
@@ -25,7 +25,7 @@
     "hardhat": "^2.19.2",
     "hardhat-gas-reporter": "^1.0.9",
     "prettier": "^3.0.0",
-    "prettier-plugin-solidity": "^1.1.3",
+    "prettier-plugin-solidity": "^1.2.0",
     "rand-seed": "^1.0.2",
     "solhint": "^3.4.1",
     "solidity-coverage": "^0.8.0",
