--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,8 @@
 [submodule "lib/forge-std"]
 	path = lib/forge-std
 	url = git@github.com:foundry-rs/forge-std.git
-	branch = v1.2.0
+	branch = v1
 [submodule "lib/common"]
 	path = lib/common
 	url = git@github.com:MZero-Labs/common.git
+	branch = feat/WEB3-586-add-EIP2098-support
