--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,18 +1,16 @@
 {
-    "plugins": [
-        "prettier-plugin-solidity"
-    ],
-    "overrides": [
-        {
-            "files": "*.sol",
-            "options": {
-                "parser": "solidity-parse",
-                "tabWidth": 4,
-                "singleQuote": false,
-                "printWidth": 120,
-                "useTabs": false,
-                "bracketSpacing": true
-            }
-        }
-    ]
+  "plugins": ["prettier-plugin-solidity"],
+  "overrides": [
+    {
+      "files": "*.sol",
+      "options": {
+        "parser": "solidity-parse",
+        "tabWidth": 4,
+        "singleQuote": false,
+        "printWidth": 120,
+        "useTabs": false,
+        "bracketSpacing": true
+      }
+    }
+  ]
 }
