feat(invariants): improve invariants (#123)
Co-authored-by: toninorair <antonina.norair@gmail.com>

--- a/foundry.toml
+++ b/foundry.toml
@@ -22,6 +22,7 @@ runs = 5000
 [profile.default.invariant]
 runs = 512
 depth = 25
+fail_on_revert = true
 
 [profile.production]
 evm_version = "shanghai"
