chore(github): add invariants test workflow

--- a/package.json
+++ b/package.json
@@ -10,26 +10,29 @@
     "prettier": "prettier --write --plugin=prettier-plugin-solidity 'script/**/*.sol' 'src/**/*.sol' 'test/**/*.sol'",
     "slither": "forge build --build-info --skip '*/test/**' --skip '*/script/**' --force && slither --compile-force-framework foundry --ignore-compile --config-file slither.config.json --fail-high .",
     "solhint": "solhint -f stylish 'src/**/*.sol'",
-    "solhint-fix": "solhint --fix 'src/**/*.sol'"
+    "solhint-fix": "solhint --fix 'src/**/*.sol'",
+    "test": "forge test",
+    "test-gas": "forge test --no-match-path 'test/invariant/*' --gas-report > gasreport.ansi",
+    "test-invariants": "forge test --match-path 'test/invariant/*'"
   },
   "devDependencies": {
-    "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
-    "@nomicfoundation/hardhat-ethers": "^3.0.0",
-    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.6",
+    "@nomicfoundation/hardhat-ethers": "^3.0.5",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.10",
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
-    "@nomicfoundation/hardhat-verify": "^2.0.0",
-    "@typechain/ethers-v6": "^0.5.0",
-    "@typechain/hardhat": "^9.0.0",
-    "chai": "^4.2.0",
-    "ethers": "^6.4.0",
-    "hardhat": "^2.19.2",
-    "hardhat-gas-reporter": "^1.0.9",
-    "prettier": "^3.0.0",
-    "prettier-plugin-solidity": "^1.2.0",
+    "@nomicfoundation/hardhat-verify": "^2.0.4",
+    "@typechain/ethers-v6": "^0.5.1",
+    "@typechain/hardhat": "^9.1.0",
+    "chai": "^5.1.0",
+    "ethers": "^6.11.1",
+    "hardhat": "^2.20.1",
+    "hardhat-gas-reporter": "^1.0.10",
+    "prettier": "^3.2.5",
+    "prettier-plugin-solidity": "^1.3.1",
     "rand-seed": "^1.0.2",
-    "solhint": "^3.4.1",
-    "solidity-coverage": "^0.8.0",
-    "typechain": "^8.3.0"
+    "solhint": "^4.1.1",
+    "solidity-coverage": "^0.8.8",
+    "typechain": "^8.3.2"
   },
   "engines": {
     "node": ">=20"
