--- a/.github/workflows/test-gas.yml
+++ b/.github/workflows/test-gas.yml
@@ -1,4 +1,4 @@
-name: Forge Test
+name: Forge Test Gas
 
 on:
   push:
@@ -30,7 +30,7 @@ jobs:
         id: build
 
       - name: Run Forge tests
-        run: forge test --gas-report > gasreport.ansi
+        run: npm run test-gas
         env:
           # make fuzzing semi-deterministic to avoid noisy gas cost estimation
           # due to non-deterministic fuzzing (but still use pseudo-random fuzzing seeds)
