fix(tests): fix invariants (#157)

--- a/.github/workflows/test-fuzz.yml
+++ b/.github/workflows/test-fuzz.yml
@@ -1,4 +1,4 @@
-name: Forge Tests Gas Report
+name: Forge Fuzz Tests
 
 on:
   push:
@@ -10,7 +10,7 @@ permissions: write-all
 
 jobs:
   check:
-    name: Gas report
+    name: Fuzz Tests
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -26,22 +26,10 @@ jobs:
           make sizes
         id: build
 
-      - name: Run Forge tests with gas report
-        run: make gas-report profile=ci
+      - name: Run Forge fuzz tests
+        run: make fuzz profile=ci
         env:
           # make fuzzing semi-deterministic to avoid noisy gas cost estimation
           # due to non-deterministic fuzzing (but still use pseudo-random fuzzing seeds)
           FOUNDRY_FUZZ_SEED: 0x${{ github.event.pull_request.base.sha || github.sha }}
           MNEMONIC: ${{ secrets.MNEMONIC_FOR_TESTS }}
-
-      - name: Compare gas reports
-        uses: Rubilmax/foundry-gas-diff@v3.16
-        id: gas_diff
-
-      - name: Add gas diff to sticky comment
-        if: github.event_name == 'pull_request' || github.event_name == 'pull_request_target'
-        uses: marocchino/sticky-pull-request-comment@v2
-        with:
-          # delete the comment in case changes no longer impact gas costs
-          delete: ${{ !steps.gas_diff.outputs.markdown }}
-          message: ${{ steps.gas_diff.outputs.markdown }}
