chore(foundry.toml): add Etherscan config (#168)

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,14 @@
 # update with your mnemonic
 MNEMONIC="test test test test test test test test test test test junk"
+
+# Localhost RPC URL
+LOCALHOST_RPC_URL=http://127.0.0.1:8545
+
+# Mainnet RPC URLs
+MAINNET_RPC_URL=
+
+# Testnet RPC URLs
+SEPOLIA_RPC_URL=
+
+# Used for verifying contracts on Etherscan
+ETHERSCAN_API_KEY=
