--- a/foundry.toml
+++ b/foundry.toml
@@ -41,3 +41,14 @@ runs = 10_000
 [profile.ci.invariant]
 runs = 512
 depth = 250
+
+[rpc_endpoints]
+localhost = "${LOCALHOST_RPC_URL}"
+mainnet = "${MAINNET_RPC_URL}"
+sepolia = "${SEPOLIA_RPC_URL}"
+
+[etherscan]
+mainnet = { key = "${ETHERSCAN_API_KEY}", url = "https://api.etherscan.io/api" }
+sepolia = { key = "${ETHERSCAN_API_KEY}", url = "https://api-sepolia.etherscan.io/api" }
+
+# See more config options at https://github.com/foundry-rs/foundry/tree/master/crates/config
