feat: Deploy getters and tests (#181)

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # update with your mnemonic
 MNEMONIC="test test test test test test test test test test test junk"
+PRIVATE_KEY=""
 
 # Localhost RPC URL
 LOCALHOST_RPC_URL=http://127.0.0.1:8545
