--- a/foundry.toml
+++ b/foundry.toml
@@ -7,7 +7,12 @@ libs = ["lib"]
 cache = true
 cache_path = "cache"
 broadcast = "broadcast"
-gas_reports = ["MToken", "MinterGateway", "MinterGatewayHarness"]
+gas_reports = [
+  "MToken",
+  "MTokenHarness",
+  "MinterGateway",
+  "MinterGatewayHarness",
+]
 gas_reports_ignore = []
 solc-version = "0.8.23"
 optimizer = false
